--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ifabnohlv#1" target="_blank">首页</a> | <a href="https://dgk92ykceobaf.cloudfront.net/1?esseht" target="_blank">动态网</a> | <a href="https://duxu97yt14q37.cloudfront.net/2?trxbzkn" target="_blank">大纪元</a> | <a href="https://d1u99il8548gs4.cloudfront.net/4?uvbtld" target="_blank">看中国</a> | <a href="https://d1lulvfep8g527.cloudfront.net/pHh5q?qgkagiw" target="_blank">新生网</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/tktpt?lqtfpowx" target="_blank">阿波罗网</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/Mjpvu?kumrkc" target="_blank">干净世界</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/10?sajtsqgwa" target="_blank">退党服务</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/Rffqf?gnqruvmtu" target="_blank">明慧广播</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/nw9Vn?qiwvlm" target="_blank">传奇时代</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/AF9AG?fqlsyfgyw" target="_blank">新境界影视</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/zqMQA?hrdkl" target="_blank">文昭谈论</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/7?duzsyzxl" target="_blank">明慧</a></p><p><a href="https://d37g5boc7rm625.cloudfront.net/9?bjkvvk" target="_blank">大法</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/3?bfxqo" target="_blank">新唐人</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/obAhT?hkdenagou" target="_blank">人民报</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/xXNHu?smzig" target="_blank">放光明</a> | <a href="https://dcz6rimunj42y.cloudfront.net/5?fpufic" target="_blank">新纪元</a> | <a href="https://d2oemtubh889hy.cloudfront.net/6?mxpjdujub" target="_blank">希望之声</a> | <a href="https://dld25pfif4r64.cloudfront.net/11?fcxzk" target="_blank">无界网络</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/Pueji?fejmbnha" target="_blank">追查国际</a> | <a href="https://d3vg08phoazui6.cloudfront.net/16?txzppbi" target="_blank">明慧之窗</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/LdvzZ?gyrxji" target="_blank">细语人生</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/fBn3r?ogseqfkl" target="_blank">新世纪影视</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/PUWMb?hczpqjstm" target="_blank">江峰时刻</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/8?xveykzbyy" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ummzkawfq#1" target="_blank">首页</a> | <a href="https://d3abchfok6e2j.cloudfront.net/1?xrfkbmk" target="_blank">动态网</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/2?jcuaqve" target="_blank">大纪元</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/4?kcapqnzdx" target="_blank">看中国</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/pHh5q?qvvrxqwm" target="_blank">新生网</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/tktpt?bfruc" target="_blank">阿波罗网</a> | <a href="https://dld25pfif4r64.cloudfront.net/Mjpvu?vjyoxj" target="_blank">干净世界</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/10?qigmbqf" target="_blank">退党服务</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/Rffqf?emenxe" target="_blank">明慧广播</a> | <a href="https://d3myewunzonann.cloudfront.net/nw9Vn?tnknhxtii" target="_blank">传奇时代</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/AF9AG?srmpdmhuu" target="_blank">新境界影视</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/zqMQA?rsyfmtn" target="_blank">文昭谈论</a> | <a href="https://d11leod1im7q2u.cloudfront.net/7?siemza" target="_blank">明慧</a></p><p><a href="https://d3siwajeg0khti.cloudfront.net/9?syrcn" target="_blank">大法</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/3?wqrehf" target="_blank">新唐人</a> | <a href="https://duxu97yt14q37.cloudfront.net/obAhT?qcxgocyr" target="_blank">人民报</a> | <a href="https://d3siwajeg0khti.cloudfront.net/xXNHu?hbbflfmkg" target="_blank">放光明</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/5?znmrqk" target="_blank">新纪元</a> | <a href="https://di88ceki78g29.cloudfront.net/6?wwpgajv" target="_blank">希望之声</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/11?yfhgrcyu" target="_blank">无界网络</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/Pueji?ayrxkczl" target="_blank">追查国际</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/16?gwcyvxylq" target="_blank">明慧之窗</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/LdvzZ?knemz" target="_blank">细语人生</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/fBn3r?sssws" target="_blank">新世纪影视</a> | <a href="https://dlp02mn13eakq.cloudfront.net/PUWMb?pmehxcc" target="_blank">江峰时刻</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/8?pwcymoxx" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg"><p align="center">川普遇袭后 拜登讲话：暴力在美国无立足地</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1" title="川普遇袭后 拜登讲话：暴力在美国无立足地""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290687-AFP__20240714__36444AF__v1__Preview__UsPoliticsBidenStatement-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1" title="【直播】川普遇刺最新进展 记者连线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290722-800X600-320x200.jpg">&nbsp;</a>
@@ -13,17 +13,18 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290250.md#1" title="拜登在枪击事件后与川普通话 提前返白宫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290263-AFP__20240714__363Y8F7__v2__HighRes__PresidentialElection-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290432.md#1" title="庆独立日精神 新世纪主办“美丽的美利坚”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290491-2407140422581528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290741.md#1">川普抵达密尔沃基 参加共和党全国大会</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290741.md#1">川普抵达密尔沃基 参加共和党全国大会</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290708.md#1">组图：法国国庆节 2024巴黎奥运火炬亮相</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290725.md#1">川普遇袭事件 FBI披露更多信息</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1">川普遇袭后 拜登讲话：暴力在美国无立足地</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290673.md#1">前消防队长在川普集会上遇难 州长：降半旗悼念</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290685.md#1">中共三中全会前夕 北京严密管控民众</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290029.md#1">退休后拥有舒适财务状况的15种方法</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290725.md#1">川普遇袭事件 FBI披露更多信息</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290684.md#1">川普遇袭后 拜登讲话：暴力在美国无立足地</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290673.md#1">前消防队长在川普集会上遇难 州长：降半旗悼念</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290685.md#1">中共三中全会前夕 北京严密管控民众</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290029.md#1">退休后拥有舒适财务状况的15种方法</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290039.md#1">广东多地现不明飞行物 目击者：持续10分钟</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289908.md#1">失业潮下 四川大学拟撤31个专业 引热议</a><br>
@@ -41,22 +42,21 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145798.md#1">【图解】川普面临的法律挑战</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122681.md#1">【特稿】进化假说使科学误入歧途（下）</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1">【更新】枪手身份曝光 FBI定调暗杀未遂</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290177.md#1">组图：川普在集会上遇刺受伤 另有1死2伤</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290396.md#1">大陆光伏全行业陷入亏损 专家分析根本问题</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290234.md#1">川普遇袭右耳受伤 马斯克：全力支持他</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290084.md#1">台湾罕见披露中共火箭军在内蒙古试射导弹</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290076.md#1">亚洲首富之子的婚礼为何如此盛大和高调</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289698.md#1">国会议员：美两党与法轮功站一起 捍卫自由</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290242.md#1">【翻墙必看】目击者谈川普被“即时袭击”</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290725.md#1">川普遇袭事件 FBI披露更多信息</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290320.md#1">重庆大暴雨持续 6条河流现超警戒水位洪水</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290741.md#1">川普抵达密尔沃基 参加共和党全国大会</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290118.md#1">【更新】枪手身份曝光 FBI定调暗杀未遂</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290126.md#1">限额5000元 中国多家银行下调储户交易额度</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290685.md#1">中共三中全会前夕 北京严密管控民众</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290396.md#1">大陆光伏全行业陷入亏损 专家分析根本问题</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290617.md#1">【直播】川普遇刺最新进展 记者连线</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290242.md#1">【翻墙必看】目击者谈川普被“即时袭击”</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290084.md#1">台湾罕见披露中共火箭军在内蒙古试射导弹</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289698.md#1">国会议员：美两党与法轮功站一起 捍卫自由</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290234.md#1">川普遇袭右耳受伤 马斯克：全力支持他</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290076.md#1">亚洲首富之子的婚礼为何如此盛大和高调</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290177.md#1">组图：川普在集会上遇刺受伤 另有1死2伤</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290279.md#1">女童去世 鲁殡仪馆8个花篮收1.38万惹议</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290243.md#1">共和党候选人：我从前排目睹对川普的袭击</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290252.md#1">川普期待参加共和党大会 据报他已出院</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290221.md#1">川普遇袭受伤：我感到子弹撕裂皮肤</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290624.md#1">【时事金扫描】三峡大坝泄洪 郑州再现洪水噩梦</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287884.md#1">北上消费致澳门百业萧条 香港或步后尘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a><br>
@@ -105,15 +105,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287904.md#1">【时事金扫描】北京玩一石几鸟 北约瞄准亚太</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287882.md#1">【新闻欣视角】中国进入互害社会？铁西上热搜</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287706.md#1">美将推动全面抗中共法案 专家：重要转折点</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287343.md#1">香港楼市小阳春已过 新盘开价跌穿2015年水平</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d156jw4l50gy3n.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
 <tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d156jw4l50gy3n.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,657</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 433,188,665 人
+!共 433,188,670 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290407-2407131413552483-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1">反迫害25周年 法轮功学员纽约上州集会</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289752-a15b52fb24370562f073f5bb29b3e6cf-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290013.md#1">台海巡队强化淡水河防务 遏止中共快艇闯入</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290407-2407131413552483-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290402.md#1">反迫害25周年 法轮功学员纽约上州集会</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289763.md#1">芬兰法轮功7·20游行反迫害 民众签名支持</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289703.md#1">追查国际主席：中共活摘器官是毁灭人类的罪恶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289700.md#1">退党中心主席：退党是解体中共最和平之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289468.md#1">7?20集会游行反迫害 华府观众：应帮助法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289281.md#1">遭软禁九个月 上海访民丁水萍向外界呼救</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289752-a15b52fb24370562f073f5bb29b3e6cf-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290744.md#1">陆无人驾驶计程车抢市 百万司机陷失业焦虑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290669.md#1">中国饮用水价格战开打 农夫山泉0.74元一瓶</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290160.md#1">“美妆一哥”骆王宇面临退款1.5亿元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290231.md#1">中共官方承认汽车市场无序竞争 冲击产业链</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289629.md#1">华裔CEO：美国在AI竞争中领先中共</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289836.md#1">大陆多地城投公司商业票据违约</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1"><img width="320" align ="left" src="https://cn.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290382.md#1">建设银行与广发银行两名分行副行长同日落马</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290095.md#1">消息：加拿大将与G7盟友讨论中共海外警察站</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289639.md#1">【环球直击】25年风雨路 法轮功学员华府烛光夜悼</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289640.md#1">【全球新闻】新冠卷土重来 中共官方承认多人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14286366-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290004.md#1">中国南方未来一周持续高温 下周一正式入伏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289363.md#1">内蒙古额尔古纳市载游客车辆侧翻 酿3死4伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289428.md#1">河北承德一村庄突发山洪 惊险画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289323.md#1">北京一秒天黑 突降瓢泼大雨 连发五预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289306.md#1">重庆多地洪灾 部分街道积水3米 多人死亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288993.md#1">女生北大毕业后 又考入上海交大 引发关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290228-7296066ff825d0fad4e91ba4e2c7f6d4-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290139.md#1">大陆男子用万元硬币还款 被法院罚2000元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290254.md#1">三退声明精选（2024/07/13）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290033.md#1">辽宁一市监局职员未到午休全离岗 市民要问责</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289996.md#1">油罐车混装事件引恐慌 大陆榨油机销量翻4倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289987.md#1">浙江男子持玩具枪打劫金店 店员惊恐尖叫</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289951.md#1">中共院士终身制没了 引发热议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14289980-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14289979.md#1">河南一高中办“编导补习班” 遭质疑捞钱</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288730.md#1">深圳龙岗教育局暑期招志愿教师照看官员子女？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286971.md#1">广西福建相继出现“龙吸水”奇观</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286471.md#1">天津一新规打破教师“铁饭碗” 引发争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286454.md#1">“人死后指纹还能解锁手机吗 ”引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283647.md#1">港大经管学院查获约30名中国籍学生假学历入学</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274702.md#1">洪水淹桂林 王维洛：与发展旅游等有关</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260042.md#1">袁红冰忆六四：坦克车把学生挤死在铁栏上</a><br>
